# bionocular

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: core.py
melanoma/: .gitignore  CORE_CHUNKING.md  Makefile  POSTPROCESSING_MIGRATION.md  README.md  TASKS.md  alembic.ini  chunk_abstracts.py  mypy.ini  pyproject.toml  run_ingestion.py  run_marker.py  run_tasks.py
melanoma/alembic/: env.py
melanoma/alembic/versions/: 001_initial.py
melanoma/data/processed/: .gitkeep  ASCO_2020.json  ASCO_2020.md
melanoma/resources/: ingestion_config.yaml  marker_config.md
melanoma/scripts/: ci.py  dev.py  process_local_files.py
melanoma/src/: __init__.py
melanoma/src/app/: __init__.py  api.py  ingest_cli.py  ingestion_service.py  postprocessing_cli.py  postprocessing_service.py
melanoma/src/domain/: __init__.py  interfaces.py  models.py
melanoma/src/infrastructure/: __init__.py  asco_postprocessor.py  chunking_strategies.py  database.py  esmo_postprocessor.py  marker_processor.py  pdf_processor.py  repository.py  storage.py
melanoma/tests/: test_chunking_strategies.py  test_core.py  test_ingestion_models.py  test_marker_processor.py  test_postprocessing.py
shared/config/: project_template.yaml
shared/docs/: architecture.md  project_creation_guide.md
tests/: __init__.py  test_core.py
tools/project-generator/: create_project.py
